added center divs to individual bio pages

--- a/bios/alison-hazle.html
+++ b/bios/alison-hazle.html
@@ -20,39 +20,47 @@
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <div class="page-container">
+    <div class="center">
 
+      <h1>Alison Hazle</h1>
 
-    <h1>Alison Hazle</h1>
+      <p>“I AM a student, artist, and animal rights activist currently
+        residing in Harford County, Maryland. I studied fine arts with a
+        focus in painting. Desiring a more fast-paced learning environment
+        and dynamic community. I moved to Philidelphia and enrolled at the
+        University of Arts where I studied Interdiciplinary Fine Arts. I
+        eventually left UArts, moving to Saugerties, NY where I worked at C
+        atskill Animal Sanctuary doing public outreach. Now back at Harford
+        Community I am continuing my study within the art exibit my work
+        in the tri-state area.”
+      </p>
 
-    <p>“I AM a student, artist, and animal rights activist currently
-      residing in Harford County, Maryland. I studied fine arts with a
-      focus in painting. Desiring a more fast-paced learning environment
-      and dynamic community. I moved to Philidelphia and enrolled at the
-      University of Arts where I studied Interdiciplinary Fine Arts. I
-      eventually left UArts, moving to Saugerties, NY where I worked at C
-      atskill Animal Sanctuary doing public outreach. Now back at Harford
-      Community I am continuing my study within the art exibit my work
-      in the tri-state area.”
-    </p>
+      <div class="member alison">
+          <img src=".images/bios/alison.png"/>
+          <h3> President </h3>
+      </div>
 
-    <div class="member alison">
-        <img src=".images/bios/alison.png"/>
-        <h3> President </h3>
     </div>
 
+
+
+
+
     <div id="global-footer"><!-- Katie Zawadowicz -->
+      <div class="center">
 
-      <p> designalliance.hcc@gmail.com </p>
+        <p> designalliance.hcc@gmail.com </p>
 
-      <p> Harford Community College </p>
-      <p>  c/o Design Alliance </p>
-      <p>  Visual, Preforming & Applied Arts </p>
-      <p>  Art + Design Program </p>
-      <p>  401 Thomas Run Road </p>
-      <p>  Bel Air, MD 21015 </p>
+        <p> Harford Community College </p>
+        <p>  c/o Design Alliance </p>
+        <p>  Visual, Preforming & Applied Arts </p>
+        <p>  Art + Design Program </p>
+        <p>  401 Thomas Run Road </p>
+        <p>  Bel Air, MD 21015 </p>
 
-      <a href="https://www.facebook.com/Design-Alliance-154206664664725/"> <img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook </a>
+        <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
 
+      </div>
     </div><!-- End #global-footer -->
 
   </div><!-- End .page-container -->
