--- a/bios/deanna-marino.html
+++ b/bios/deanna-marino.html
@@ -20,38 +20,46 @@
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <div class="page-container">
+    <div class="center">
 
+      <h1>Deanna Marino</h1>
 
-    <h1>Deanna Marino</h1>
+      <p>I was born in Fayetteville, North Carolina and currently living
+        in Harford County, Maryland. I’m a part time high school senior and
+        part time college freshman. Freelance graphic design/digital artist
+        (founding my company Deanna Joy Marino Works) specializing in Advertising
+        Design. I have employed my skills most recently directing three full-
+        scale theatrical productions and curating local art exhibitions. My
+        hobbies include seeing movies and plays and I collect buttons and
+        feathers!
+      </p>
 
-    <p>I was born in Fayetteville, North Carolina and currently living
-      in Harford County, Maryland. I’m a part time high school senior and
-      part time college freshman. Freelance graphic design/digital artist
-      (founding my company Deanna Joy Marino Works) specializing in Advertising
-      Design. I have employed my skills most recently directing three full-
-      scale theatrical productions and curating local art exhibitions. My
-      hobbies include seeing movies and plays and I collect buttons and
-      feathers!
-    </p>
+      <div class="member deanna">
+          <img src=".images/bios/deanna.png"/>
+          <h3> Member </h3>
+      </div>
 
-    <div class="member deanna">
-        <img src=".images/bios/deanna.png"/>
-        <h3> Member </h3>
     </div>
 
+
+
+
+
     <div id="global-footer"><!-- Katie Zawadowicz -->
+      <div class="center">
 
-      <p> designalliance.hcc@gmail.com </p>
+        <p> designalliance.hcc@gmail.com </p>
 
-      <p> Harford Community College </p>
-      <p>  c/o Design Alliance </p>
-      <p>  Visual, Preforming & Applied Arts </p>
-      <p>  Art + Design Program </p>
-      <p>  401 Thomas Run Road </p>
-      <p>  Bel Air, MD 21015 </p>
+        <p> Harford Community College </p>
+        <p>  c/o Design Alliance </p>
+        <p>  Visual, Preforming & Applied Arts </p>
+        <p>  Art + Design Program </p>
+        <p>  401 Thomas Run Road </p>
+        <p>  Bel Air, MD 21015 </p>
 
-      <a href="https://www.facebook.com/Design-Alliance-154206664664725/"> <img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook </a>
+        <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
 
+      </div>
     </div><!-- End #global-footer -->
 
   </div><!-- End .page-container -->
