--- a/bios/courtney-schultz.html
+++ b/bios/courtney-schultz.html
@@ -20,38 +20,45 @@
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <div class="page-container">
+    <div class="center">
 
+      <h1>Courtney Schultz</h1>
 
-    <h1>Courtney Schultz</h1>
+      <p>I am a photography and fine arts student based out of Harford
+        County, Maryland. I am an adventure enthusiast and made art all
+        across the US and China. While running my own photography and floral
+        design business, in addition to full time work and school, I still
+        dedicate time to work on my fine art pieces. My work ranges from still
+        life to prints to metal sculptures. My work has been exhibited and placed
+        in shows. I hope to one day live in a small cabin in the woods, making
+        art and possibly curating for a gallery.
+      </p>
 
-    <p>I am a photography and fine arts student based out of Harford
-      County, Maryland. I am an adventure enthusiast and made art all
-      across the US and China. While running my own photography and floral
-      design business, in addition to full time work and school, I still
-      dedicate time to work on my fine art pieces. My work ranges from still
-      life to prints to metal sculptures. My work has been exhibited and placed
-      in shows. I hope to one day live in a small cabin in the woods, making
-      art and possibly curating for a gallery.
-    </p>
+      <div class="member courtney">
+          <img src=".images/bios/courtney.png"/>
+          <h3> Vice-President </h3>
+      </div>
 
-    <div class="member courtney">
-        <img src=".images/bios/courtney.png"/>
-        <h3> Vice-President </h3>
     </div>
 
+
+
+
     <div id="global-footer"><!-- Katie Zawadowicz -->
+      <div class="center">
 
-      <p> designalliance.hcc@gmail.com </p>
+        <p> designalliance.hcc@gmail.com </p>
 
-      <p> Harford Community College </p>
-      <p>  c/o Design Alliance </p>
-      <p>  Visual, Preforming & Applied Arts </p>
-      <p>  Art + Design Program </p>
-      <p>  401 Thomas Run Road </p>
-      <p>  Bel Air, MD 21015 </p>
+        <p> Harford Community College </p>
+        <p>  c/o Design Alliance </p>
+        <p>  Visual, Preforming & Applied Arts </p>
+        <p>  Art + Design Program </p>
+        <p>  401 Thomas Run Road </p>
+        <p>  Bel Air, MD 21015 </p>
 
-      <a href="https://www.facebook.com/Design-Alliance-154206664664725/"> <img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook </a>
+        <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
 
+      </div>
     </div><!-- End #global-footer -->
 
   </div><!-- End .page-container -->
