--- a/bios/nikki-ishak.html
+++ b/bios/nikki-ishak.html
@@ -20,40 +20,47 @@
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <div class="page-container">
+    <div class="center">
 
+      <h1>Nikki Ishak</h1>
 
-    <h1>Nikki Ishak</h1>
+      <p>I am a visual artist and student from the lower Susquehanna. I
+        specialize in drawing and illustrating but my two new loves are zine-
+        making and sumi-e painting. Recently, my work has been featured in a
+        public gallery, a small storefront, in summer arts and crafts shows in
+        Havre de Grace, MD. I have won first place and best in show in student
+        and drawing categories repetitively.
+        When I’m not making art, I work odd jobs, training at my local Dojung,
+        or making sweet music on my ukulele and pianoforte. I sleep with eight
+        stuffed animals and dream of traveling to Mars.
+      </p>
 
-    <p>I am a visual artist and student from the lower Susquehanna. I
-      specialize in drawing and illustrating but my two new loves are zine-
-      making and sumi-e painting. Recently, my work has been featured in a
-      public gallery, a small storefront, in summer arts and crafts shows in
-      Havre de Grace, MD. I have won first place and best in show in student
-      and drawing categories repetitively.
-      When I’m not making art, I work odd jobs, training at my local Dojung,
-      or making sweet music on my ukulele and pianoforte. I sleep with eight
-      stuffed animals and dream of traveling to Mars.
-    </p>
+      <div class="member nikki">
+          <img src=".images/bios/nikki.png"/>
+          <h3> Secretary </h3>
+      </div>
 
-    <div class="member nikki">
-        <img src=".images/bios/nikki.png"/>
-        <h3> Secretary </h3>
     </div>
 
 
+
+
+    
     <div id="global-footer"><!-- Katie Zawadowicz -->
+      <div class="center">
 
-      <p> designalliance.hcc@gmail.com </p>
+        <p> designalliance.hcc@gmail.com </p>
 
-      <p> Harford Community College </p>
-      <p>  c/o Design Alliance </p>
-      <p>  Visual, Preforming & Applied Arts </p>
-      <p>  Art + Design Program </p>
-      <p>  401 Thomas Run Road </p>
-      <p>  Bel Air, MD 21015 </p>
+        <p> Harford Community College </p>
+        <p>  c/o Design Alliance </p>
+        <p>  Visual, Preforming & Applied Arts </p>
+        <p>  Art + Design Program </p>
+        <p>  401 Thomas Run Road </p>
+        <p>  Bel Air, MD 21015 </p>
 
-      <a href="https://www.facebook.com/Design-Alliance-154206664664725/"> <img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook </a>
+        <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
 
+      </div>
     </div><!-- End #global-footer -->
 
   </div><!-- End .page-container -->
