--- a/bios/phoebe-monroe.html
+++ b/bios/phoebe-monroe.html
@@ -20,41 +20,47 @@
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <div class="page-container">
+    <div class="center">
 
+      <h1>Nikki Ishak</h1>
 
-    <h1>Nikki Ishak</h1>
+      <p>I am 19 years old, born on October 1st in Flemington, New Jersey. I
+        now live in Bel Air, Maryland.I graduated from Bel Air High School
+        in 2015 and is now attending Harford Community College where I am
+        studying Graphic Design. I plan to transfer to an art school after
+        attending Harford Community College for two years. I have completed my
+        first semester and am currently taking part in a personal study where
+        others and I are learn to develop, plan, and produce an exhibition.
+      </p>
 
-    <p>I am 19 years old, born on October 1st in Flemington, New Jersey. I
-      now live in Bel Air, Maryland.I graduated from Bel Air High School
-      in 2015 and is now attending Harford Community College where I am
-      studying Graphic Design. I plan to transfer to an art school after
-      attending Harford Community College for two years. I have completed my
-      first semester and am currently taking part in a personal study where
-      others and I are learn to develop, plan, and produce an exhibition.
-    </p>
+      <div class="member phoebe">
+          <img src=".images/bios/phoebe.png"/>
+          <h3> Treasurer </h3>
+      </div>
 
-    <div class="member phoebe">
-        <img src=".images/bios/phoebe.png"/>
-        <h3> Treasurer </h3>
     </div>
 
 
 
+
+
     <div id="global-footer"><!-- Katie Zawadowicz -->
+      <div class="center">
 
-      <p> designalliance.hcc@gmail.com </p>
+        <p> designalliance.hcc@gmail.com </p>
 
-      <p> Harford Community College </p>
-      <p>  c/o Design Alliance </p>
-      <p>  Visual, Preforming & Applied Arts </p>
-      <p>  Art + Design Program </p>
-      <p>  401 Thomas Run Road </p>
-      <p>  Bel Air, MD 21015 </p>
+        <p> Harford Community College </p>
+        <p>  c/o Design Alliance </p>
+        <p>  Visual, Preforming & Applied Arts </p>
+        <p>  Art + Design Program </p>
+        <p>  401 Thomas Run Road </p>
+        <p>  Bel Air, MD 21015 </p>
 
-      <a href="https://www.facebook.com/Design-Alliance-154206664664725/"> <img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook </a>
+        <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
 
+      </div>
     </div><!-- End #global-footer -->
-
+    
   </div><!-- End .page-container -->
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
