added .center divs and global footers

--- a/bios.html
+++ b/bios.html
@@ -21,51 +21,74 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="page-container">
+          <div class="center">
 
-          <h1>Who We Are</h1>
+            <h1>Who We Are</h1>
 
-          <div class="background">
+            <div class="background">
+            </div>
+
+            <div class="content clearfix">
+
+              <div class="member alison">
+                <a target="_blank" href="bios/alison-hazle.html">
+                  <img src="images/bios/alison.png" alt="alison.png" width="80" />
+                </a>
+                <h4>Alison</h4>
+              </div>
+
+              <div class="member courtney">
+                <a target="_blank" href="bios/courtney-schultz.html">
+                  <img src="images/bios/courtney.png" alt="courtney.png" width="80" />
+                </a>
+                <h4>Courtney</h4>
+              </div>
+
+              <div class="member deanna">
+                <a target="_blank" href="bios/deanna-marino.html">
+                  <img src="images/bios/deanna.png" alt="courtney.png" width="80" />
+                </a>
+                <h4>Deanna</h4>
+              </div>
+
+              <div class="member nikki">
+                <a target="_blank" href="bios/nikki-ishak.html">
+                  <img src="images/bios/nikki.png" alt="nikki.png" width="80" />
+                </a>
+                <h4>Nikki</h4>
+              </div>
+
+              <div class="member phoebe">
+                <a target="_blank" href="bios/phoebe-monroe.html">
+                  <img src="images/bios/phoebe.png" alt="phoebe.png" width="80" />
+                </a>
+                <h4>Phoebe</h4>
+              </div>
+
+            </div>
+
           </div>
 
-          <div class="content clearfix">
 
-            <div class="member alison">
-              <a target="_blank" href="bios/alison-hazle.html">
-                <img src="images/bios/alison.png" alt="alison.png" width="80" />
-              </a>
-              <h4>Alison</h4>
+
+
+
+          <div id="global-footer"><!-- Katie Zawadowicz -->
+            <div class="center">
+
+              <p> designalliance.hcc@gmail.com </p>
+
+              <p> Harford Community College </p>
+              <p>  c/o Design Alliance </p>
+              <p>  Visual, Preforming & Applied Arts </p>
+              <p>  Art + Design Program </p>
+              <p>  401 Thomas Run Road </p>
+              <p>  Bel Air, MD 21015 </p>
+
+              <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
+
             </div>
-
-            <div class="member courtney">
-              <a target="_blank" href="bios/courtney-schultz.html">
-                <img src="images/bios/courtney.png" alt="courtney.png" width="80" />
-              </a>
-              <h4>Courtney</h4>
-            </div>
-
-            <div class="member deanna">
-              <a target="_blank" href="bios/deanna-marino.html">
-                <img src="images/bios/deanna.png" alt="courtney.png" width="80" />
-              </a>
-              <h4>Deanna</h4>
-            </div>
-
-            <div class="member nikki">
-              <a target="_blank" href="bios/nikki-ishak.html">
-                <img src="images/bios/nikki.png" alt="nikki.png" width="80" />
-              </a>
-              <h4>Nikki</h4>
-            </div>
-
-            <div class="member phoebe">
-              <a target="_blank" href="bios/phoebe-monroe.html">
-                <img src="images/bios/phoebe.png" alt="phoebe.png" width="80" />
-              </a>
-              <h4>Phoebe</h4>
-            </div>
-
-          </div>
-
+          </div><!-- End #global-footer -->
         </div><!-- End .page-container -->
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
