--- a/works/works.html
+++ b/works/works.html
@@ -20,25 +20,13 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="page-container">
+          <div class="center">
 
-          <!--<div>
-            <img src="../images/gallery/tapelifting_monroe-05.jpg"/>
+            <div id="img123">
+              <img src="../images/gallery/tapelifting_monroe-05.jpg"/>
+            </div>
+
           </div>
-          <div>
-            <img id="name" src="../works/images/Screen Shot 2016-05-04 at 8.38.15 PM.png"/>
-          </div>
--->
-
-
-
-          <!--<div id="imgContainer">-->
-              <div id="img123">
-                  <img src="../images/gallery/tapelifting_monroe-05.jpg"/>
-              </div>
-              <!--<div id="img321">
-                  <img src="../works/images/Screen Shot 2016-05-04 at 8.38.15 PM.png" width="250px"/>
-              </div>
-          </div>-->
 
 
 
@@ -61,23 +49,22 @@
 
 
 
-        <!--  <div id="global-footer" margin-left="auto" margin="auto"><!-- Katie Zawadowicz -->
+          <div id="global-footer"><!-- Katie Zawadowicz -->
+            <div class="center">
 
-        <!--<p> designalliance.hcc@gmail.com </p>
-            <p> Harford Community College
-                c/o Design Alliance
-                Visual, Preforming & Applied Arts
-                Art + Design Program
-                401 Thomas Run Road
-                Bel Air, MD 21015
-            </p>
-            <!--<a href="https://www.facebook.com/Design-Alliance-154206664664725/"> <img src=""/> </a>-->
-            <!--  </div><!-- End #global-footer -->
+              <p> designalliance.hcc@gmail.com </p>
 
+              <p> Harford Community College </p>
+              <p>  c/o Design Alliance </p>
+              <p>  Visual, Preforming & Applied Arts </p>
+              <p>  Art + Design Program </p>
+              <p>  401 Thomas Run Road </p>
+              <p>  Bel Air, MD 21015 </p>
 
+              <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
 
-
-
+            </div>
+          </div><!-- End #global-footer -->
 
         </div><!-- End .page-container -->
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
