added .button to #who-section <a>

--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
           <img src="images/bios/deanna.png" alt="Advisor-Photo">
           <p class="main-text">Kenneth Jones</p>
           <p class="subtext">Advisor</p>
-          <a href="url">View Profile</a>
+          <a class="button" href="url">View Profile</a>
         </div>
 
         <div class="profile president">
           <img src="images/bios/alison.png" alt="President-Photo">
           <p class="main-text">Alison Hazel</p>
           <p class="subtext">President</p>
-          <a href="url">View Profile</a>
+          <a class="button" href="url">View Profile</a>
 
         </div>
 
@@ -94,7 +94,7 @@
           <img src="images/bios/courtney.png" alt="Vice-President-Photo">
           <p class="main-text">Courtney Schultz</p>
           <p class="subtext">Vice-President</p>
-          <a href="url">View Profile</a>
+          <a class="button" href="url">View Profile</a>
 
         </div>
 
@@ -102,7 +102,7 @@
           <img src="images/bios/nikki.png" alt="Secretary-Photo">
           <p class="main-text">Nikki Ishak</p>
           <p class="subtext">Secretary</p>
-          <a href="url">View Profile</a>
+          <a class="button" href="url">View Profile</a>
 
         </div>
 
@@ -110,10 +110,10 @@
           <img src="images/bios/phoebe.png" alt="Treasurer-Photo">
           <p class="main-text">Phoebe Monroe</p>
           <p class="subtext">Treasurer</p>
-          <a href="url">View Profile</a>
+          <a class="button" href="url">View Profile</a>
         </div>
 
-        <a class="see-all" href="url">View All Profiles</a>
+        <a class="see-all button" href="url">View All Profiles</a>
 
       </div>
     </div><!-- End #who-section -->
