images of members came through.
got images to work on individual bios

--- a/bios/alison-hazle.html
+++ b/bios/alison-hazle.html
@@ -36,8 +36,13 @@
       </p>
 
       <div class="member alison">
-          <img src=".images/bios/alison.png"/>
+          <img src="../images/bios/alison.png">
           <h3> President </h3>
+      </div>
+
+      <div class="profile advisor">
+        <img src="../images/bios/deanna.png" alt="Advisor-Photo">
+
       </div>
 
     </div>
