--- a/bios/courtney-schultz.html
+++ b/bios/courtney-schultz.html
@@ -35,7 +35,7 @@
       </p>
 
       <div class="member courtney">
-          <img src=".images/bios/courtney.png"/>
+          <img src="../images/bios/courtney.png">
           <h3> Vice-President </h3>
       </div>
 
