--- a/bios/deanna-marino.html
+++ b/bios/deanna-marino.html
@@ -35,7 +35,7 @@
       </p>
 
       <div class="member deanna">
-          <img src=".images/bios/deanna.png"/>
+          <img src="../images/bios/deanna.png">
           <h3> Member </h3>
       </div>
 
