--- a/bios/nikki-ishak.html
+++ b/bios/nikki-ishak.html
@@ -36,7 +36,7 @@
       </p>
 
       <div class="member nikki">
-          <img src=".images/bios/nikki.png"/>
+          <img src="../images/bios/nikki.png">
           <h3> Secretary </h3>
       </div>
 
@@ -45,7 +45,7 @@
 
 
 
-    
+
     <div id="global-footer"><!-- Katie Zawadowicz -->
       <div class="center">
 
