--- a/bios/phoebe-monroe.html
+++ b/bios/phoebe-monroe.html
@@ -34,7 +34,7 @@
       </p>
 
       <div class="member phoebe">
-          <img src=".images/bios/phoebe.png"/>
+          <img src="../images/bios/phoebe.png">
           <h3> Treasurer </h3>
       </div>
 
@@ -60,7 +60,7 @@
 
       </div>
     </div><!-- End #global-footer -->
-    
+
   </div><!-- End .page-container -->
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
