bio art plugged in
inserted individual art pieces into individual bio pages

--- a/bios/alison-hazle.html
+++ b/bios/alison-hazle.html
@@ -40,8 +40,15 @@
           <h3> President </h3>
       </div>
 
-      <div class="profile advisor">
-        <img src="../images/bios/deanna.png" alt="Advisor-Photo">
+      <div class="art">
+
+        <div class="alisonart1">
+          <img src="../images/bios/alisonart1.jpg">
+        </div>
+
+        <div class="alisonart2">
+          <img src="../images/bios/alisoneart2.jpg">
+        </div>
 
       </div>
 
