--- a/bios/nikki-ishak.html
+++ b/bios/nikki-ishak.html
@@ -40,6 +40,22 @@
           <h3> Secretary </h3>
       </div>
 
+      <div class="art">
+
+        <div class="nikkiart1">
+          <img src="../images/bios/nikkiart1.jpg">
+        </div>
+
+        <div class="nikkiart2">
+          <img src="../images/bios/nikkieart2.jpg">
+        </div>
+
+        <div class="nikkiart3">
+          <img src="../images/bios/nikkiart3.jpg">
+        </div>
+
+      </div>
+
     </div>
 
 
