--- a/bios/phoebe-monroe.html
+++ b/bios/phoebe-monroe.html
@@ -38,6 +38,22 @@
           <h3> Treasurer </h3>
       </div>
 
+      <div class="art">
+
+        <div class="phoebeart1">
+          <img src="../images/bios/phoebeart1.jpg">
+        </div>
+
+        <div class="phoebeart2">
+          <img src="../images/bios/phoebeart2.jpg">
+        </div>
+
+        <div class="phoebeart3">
+          <img src="../images/bios/phoebeart3.jpg">
+        </div>
+
+      </div>
+
     </div>
 
 
