--- a/bios/courtney-schultz.html
+++ b/bios/courtney-schultz.html
@@ -39,7 +39,17 @@
           <h3> Vice-President </h3>
       </div>
 
+      <div class="art">
+
+        <div class="courtneyart1">
+          <img src="../images/bios/courtneyart1.jpg">
+        </div>
+
+      </div>
+
     </div>
+
+  </div>
 
 
 
