--- a/bios/deanna-marino.html
+++ b/bios/deanna-marino.html
@@ -39,8 +39,17 @@
           <h3> Member </h3>
       </div>
 
+      <div class="art">
+
+        <div class="deannaart1">
+          <img src="../images/bios/deannaart1.jpg">
+        </div>
+
+      </div>
+
     </div>
 
+  </div>
 
 
 
