--- a/bios/nikki-ishak.html
+++ b/bios/nikki-ishak.html
@@ -7,62 +7,51 @@
   <meta name="description" content="PUT A DESCRIPTION ABOUT YOUR SITE HERE">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="../apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/vendor/normalize.css">
-  <link rel="stylesheet" href="css/vendor/html5-main.css">
-  <link rel="stylesheet" href="css/main.css">
-  <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+  <link rel="stylesheet" href="../css/vendor/normalize.css">
+  <link rel="stylesheet" href="../css/vendor/html5-main.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
-
-<body id="bios-page">
+<body id="individual-bio">
   <!--[if lt IE 8]>
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <div class="page-container">
     <div class="center">
 
-      <h1>Who We Are</h1>
+      <h1>Nikki Ishak</h1>
 
-      <div class="background">
+      <p>I am a visual artist and student from the lower Susquehanna. I
+        specialize in drawing and illustrating but my two new loves are zine-
+        making and sumi-e painting. Recently, my work has been featured in a
+        public gallery, a small storefront, in summer arts and crafts shows in
+        Havre de Grace, MD. I have won first place and best in show in student
+        and drawing categories repetitively.
+        When I’m not making art, I work odd jobs, training at my local Dojung,
+        or making sweet music on my ukulele and pianoforte. I sleep with eight
+        stuffed animals and dream of traveling to Mars.
+      </p>
+
+      <div class="member nikki">
+          <img src="../images/bios/nikki.png">
+          <h3> Secretary </h3>
       </div>
 
-      <div class="content clearfix">
+      <div class="art">
 
-        <div class="member alison">
-          <a target="_blank" href="bios/alison-hazle.html">
-            <img src="images/bios/alison.png" alt="alison.png" width="80" />
-          </a>
-          <h4>Alison</h4>
+        <div class="nikkiart1">
+          <img src="../images/bios/nikkiart1.jpg">
         </div>
 
-        <div class="member courtney">
-          <a target="_blank" href="bios/courtney-schultz.html">
-            <img src="images/bios/courtney.png" alt="courtney.png" width="80" />
-          </a>
-          <h4>Courtney</h4>
+        <div class="nikkiart2">
+          <img src="../images/bios/nikkieart2.jpg">
         </div>
 
-        <div class="member deanna">
-          <a target="_blank" href="bios/deanna-marino.html">
-            <img src="images/bios/deanna.png" alt="courtney.png" width="80" />
-          </a>
-          <h4>Deanna</h4>
-        </div>
-
-        <div class="member nikki">
-          <a target="_blank" href="bios/nikki-ishak.html">
-            <img src="images/bios/nikki.png" alt="nikki.png" width="80" />
-          </a>
-          <h4>Nikki</h4>
-        </div>
-
-        <div class="member phoebe">
-          <a target="_blank" href="bios/phoebe-monroe.html">
-            <img src="images/bios/phoebe.png" alt="phoebe.png" width="80" />
-          </a>
-          <h4>Phoebe</h4>
+        <div class="nikkiart3">
+          <img src="../images/bios/nikkiart3.jpg">
         </div>
 
       </div>
@@ -89,11 +78,12 @@
 
       </div>
     </div><!-- End #global-footer -->
+
   </div><!-- End .page-container -->
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="../js/plugins.js"></script>
+  <script src="../js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <!-- <script>
