adjusting look of gallery section homepage

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       </div>
 
       <div id="photoLink">
-        <a href="gallery.html">View All Works</a>
+        <a href="gallery.html" class="see-all button">View All Works</a>
       </div>
 
     </div>
