--- a/index.html
+++ b/index.html
@@ -141,26 +141,10 @@
 
           <div class="inner">
             <ul class="clearfix">
-              <li>
-                <a href="works/works.html">
-                  <img src="images/gallery/crops/Williams1.jpg" alt="">
-                </a>
-              </li>
-              <li>
-                <a href="works/works.html">
-                  <img src="images/gallery/crops/Williams2.jpg" alt="">
-                </a>
-              </li>
-              <li>
-                <a href="works/works.html">
-                  <img src="images/gallery/crops/harris4.jpg" alt="">
-                </a>
-              </li>
-              <li>
-                <a href="works/works.html">
-                  <img src="images/gallery/crops/Lu1.jpg" alt="">
-                </a>
-              </li>
+              <li><a href="works/works.html"><img src="images/gallery/crops/Williams1.jpg" alt=""></a>
+              </li><li><a href="works/works.html"><img src="images/gallery/crops/Williams2.jpg" alt=""></a>
+              </li><li><a href="works/works.html"><img src="images/gallery/crops/harris4.jpg" alt=""></a>
+              </li><li><a href="works/works.html"><img src="images/gallery/crops/Lu1.jpg" alt=""></a></li>
             </ul>
           </div>
 
