Intro - Base text
Just adding some base text to html

--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
 
     <div id="intro-section" class="section row"><!-- Jacob Bendan -->
       <div class="center">
-
-        Introduction / hook section
+        <h1>Creativity</h1>
+        <h1>Unleashed</h1>
+        <h1>Design</h1>
+        <h1>Alliance</h1>
+  
 
       </div>
     </div><!-- End #intro-section -->
