--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1>Unleashed</h1>
         <h1>Design</h1>
         <h1>Alliance</h1>
-  
+
 
       </div>
     </div><!-- End #intro-section -->
@@ -76,7 +76,7 @@
     <div id="who-section" class="section row"><!-- Sara Cantler -->
       <div class="center">
 
-        <h1>Members</h1>
+        <h1 align="center">Members</h1>
 
         <div class="profile advisor">
           <img src="images/bios/deanna.png" alt="Advisor-Photo">
