--- a/bios/phoebe-monroe.html
+++ b/bios/phoebe-monroe.html
@@ -24,14 +24,16 @@
 
       <h1>Nikki Ishak</h1>
 
-      <p>I am 19 years old, born on October 1st in Flemington, New Jersey. I
-        now live in Bel Air, Maryland.I graduated from Bel Air High School
-        in 2015 and is now attending Harford Community College where I am
-        studying Graphic Design. I plan to transfer to an art school after
-        attending Harford Community College for two years. I have completed my
-        first semester and am currently taking part in a personal study where
-        others and I are learn to develop, plan, and produce an exhibition.
-      </p>
+      <div class="textbox">
+        <p>I am 19 years old, born on October 1st in Flemington, New Jersey. I
+          now live in Bel Air, Maryland.I graduated from Bel Air High School
+          in 2015 and is now attending Harford Community College where I am
+          studying Graphic Design. I plan to transfer to an art school after
+          attending Harford Community College for two years. I have completed my
+          first semester and am currently taking part in a personal study where
+          others and I are learn to develop, plan, and produce an exhibition.
+        </p>
+      </div>
 
       <div class="member phoebe">
           <img src="../images/bios/phoebe.png">
