--- a/bios/nikki-ishak.html
+++ b/bios/nikki-ishak.html
@@ -24,16 +24,18 @@
 
       <h1>Nikki Ishak</h1>
 
-      <p>I am a visual artist and student from the lower Susquehanna. I
-        specialize in drawing and illustrating but my two new loves are zine-
-        making and sumi-e painting. Recently, my work has been featured in a
-        public gallery, a small storefront, in summer arts and crafts shows in
-        Havre de Grace, MD. I have won first place and best in show in student
-        and drawing categories repetitively.
-        When I’m not making art, I work odd jobs, training at my local Dojung,
-        or making sweet music on my ukulele and pianoforte. I sleep with eight
-        stuffed animals and dream of traveling to Mars.
-      </p>
+      <div class="textbox">
+        <p>I am a visual artist and student from the lower Susquehanna. I
+          specialize in drawing and illustrating but my two new loves are zine-
+          making and sumi-e painting. Recently, my work has been featured in a
+          public gallery, a small storefront, in summer arts and crafts shows in
+          Havre de Grace, MD. I have won first place and best in show in student
+          and drawing categories repetitively.
+          When I’m not making art, I work odd jobs, training at my local Dojung,
+          or making sweet music on my ukulele and pianoforte. I sleep with eight
+          stuffed animals and dream of traveling to Mars.
+        </p>
+      </div>
 
       <div class="member nikki">
           <img src="../images/bios/nikki.png">
