fixed typo alison individual bio html

--- a/bios/alison-hazle.html
+++ b/bios/alison-hazle.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="alisonart2">
-          <img src="../images/bios/alisoneart2.jpg">
+          <img src="../images/bios/alisonart2.jpg">
         </div>
 
       </div>
