--- a/bios.html
+++ b/bios.html
@@ -1,108 +1,85 @@
 <!doctype html>
 <html class="no-js" lang="">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>PUT A TITLE HERE</title>
-  <meta name="description" content="PUT A DESCRIPTION ABOUT YOUR SITE HERE">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>PUT A TITLE HERE</title>
+        <meta name="description" content="PUT A DESCRIPTION ABOUT YOUR SITE HERE">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <!-- Place favicon.ico in the root directory -->
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/vendor/normalize.css">
-  <link rel="stylesheet" href="css/vendor/html5-main.css">
-  <link rel="stylesheet" href="css/main.css">
-  <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-</head>
+        <link rel="stylesheet" href="css/vendor/normalize.css">
+        <link rel="stylesheet" href="css/vendor/html5-main.css">
+        <link rel="stylesheet" href="css/main.css">
+        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    </head>
 
-<body id="bios-page">
-  <!--[if lt IE 8]>
-  <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-  <div class="page-container">
-    <div class="center">
+    <body id="bios-page">
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+        <div class="site-container">
 
-      <h1>Who We Are</h1>
+          <h1>Who We Are</h1>
 
-      <div class="background">
-      </div>
+          <div class="background">
+          </div>
 
-      <div class="content clearfix">
+          <div class="content">
 
-        <div class="member alison">
-          <a target="_blank" href="bios/alison-hazle.html">
-            <img src="images/bios/alison.png" alt="alison.png" width="80" />
-          </a>
-          <h4>Alison</h4>
-        </div>
+            <div class="alison">
+              <a target="_blank" href="bios/alison-hazle.html">
+                <img src="images/bios/alison.png" alt="alison.png" width="80" />
+              </a>
+              <h4>Alison</h4>
+            </div>
 
-        <div class="member courtney">
-          <a target="_blank" href="bios/courtney-schultz.html">
-            <img src="images/bios/courtney.png" alt="courtney.png" width="80" />
-          </a>
-          <h4>Courtney</h4>
-        </div>
+            <div class="courtney">
+              <a target="_blank" href="bios/courtney-schultz.html">
+                <img src="images/bios/courtney.png" alt="courtney.png" width="80" />
+              </a>
+              <h4>Courtney</h4>
+            </div>
 
-        <div class="member deanna">
-          <a target="_blank" href="bios/deanna-marino.html">
-            <img src="images/bios/deanna.png" alt="courtney.png" width="80" />
-          </a>
-          <h4>Deanna</h4>
-        </div>
+            <div class="deanna">
+              <a target="_blank" href="bios/deanna-marino.html">
+                <img src="images/bios/deanna.png" alt="courtney.png" width="80" />
+              </a>
+              <h4>Deanna</h4>
+            </div>
 
-        <div class="member nikki">
-          <a target="_blank" href="bios/nikki-ishak.html">
-            <img src="images/bios/nikki.png" alt="nikki.png" width="80" />
-          </a>
-          <h4>Nikki</h4>
-        </div>
+            <div class="nikki">
+              <a target="_blank" href="bios/nikki-ishak.html">
+                <img src="images/bios/nikki.png" alt="nikki.png" width="80" />
+              </a>
+              <h4>Nikki</h4>
+            </div>
 
-        <div class="member phoebe">
-          <a target="_blank" href="bios/phoebe-monroe.html">
-            <img src="images/bios/phoebe.png" alt="phoebe.png" width="80" />
-          </a>
-          <h4>Phoebe</h4>
-        </div>
+            <div class="phoebe">
+              <a target="_blank" href="bios/phoebe-monroe.html">
+                <img src="images/bios/phoebe.png" alt="phoebe.png" width="80" />
+              </a>
+              <h4>Phoebe</h4>
+            </div>
 
-      </div>
+          </div>
 
-    </div>
+        </div><!-- End .site-container -->
+        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
 
-
-
-
-
-    <div id="global-footer"><!-- Katie Zawadowicz -->
-      <div class="center">
-
-        <p> designalliance.hcc@gmail.com </p>
-
-        <p> Harford Community College </p>
-        <p>  c/o Design Alliance </p>
-        <p>  Visual, Preforming & Applied Arts </p>
-        <p>  Art + Design Program </p>
-        <p>  401 Thomas Run Road </p>
-        <p>  Bel Air, MD 21015 </p>
-
-        <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
-
-      </div>
-    </div><!-- End #global-footer -->
-  </div><!-- End .page-container -->
-  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <!-- <script>
-  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-  function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-  e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-  e.src='https://www.google-analytics.com/analytics.js';
-  r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-  ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-</script> -->
-</body>
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script> -->
+    </body>
 </html>
