Put navigation buttons into a list

--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
     <div id="global-navigation" class="section row"><!-- Katie Zawadowicz -->
       <div class="center">
 
-        <a class="button" href="index.html"> Home </a>
-        <a class="button" href="#mission"> Mission </a>
-        <a class="button" href="bios.html"> Who We Are </a>
-        <a class="button" href="gallery.html"> Gallery </a>
-        <a class="button" href=""> Work With Us </a>
+        <img src="images/Header & Footer/cargologo.png" href="index.html"/>
+
+          <ul>
+            <li> <a class="button" href="#mission"> Mission </a> </li>
+            <li> <a class="button" href="bios.html"> Who We Are </a> </li>
+            <li> <a class="button" href="gallery.html"> Gallery </a> </li>
+            <li> <a class="button" href="#contact-section"> Work With Us </a> </li>
+          </ul>
 
       </div>
     </div><!-- End #global-navigation -->
