ADDED LINKS TO BIO BUTTONS.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <img src="images/bios/alison.png" alt="President-Photo">
           <p class="main-text">Alison Hazel</p>
           <p class="subtext">President</p>
-          <a class="button" href="url">View Profile</a>
+          <a class="button" href="bios/alison-hazle.html">View Profile</a>
 
         </div>
 
@@ -100,7 +100,7 @@
           <img src="images/bios/courtney.png" alt="Vice-President-Photo">
           <p class="main-text">Courtney Schultz</p>
           <p class="subtext">Vice-President</p>
-          <a class="button" href="url">View Profile</a>
+          <a class="button" href="bios/courtney-schultz.html">View Profile</a>
 
         </div>
 
@@ -108,7 +108,7 @@
           <img src="images/bios/nikki.png" alt="Secretary-Photo">
           <p class="main-text">Nikki Ishak</p>
           <p class="subtext">Secretary</p>
-          <a class="button" href="url">View Profile</a>
+          <a class="button" href="bios/nikki-ishak.html">View Profile</a>
 
         </div>
 
@@ -116,10 +116,10 @@
           <img src="images/bios/phoebe.png" alt="Treasurer-Photo">
           <p class="main-text">Phoebe Monroe</p>
           <p class="subtext">Treasurer</p>
-          <a class="button" href="url">View Profile</a>
+          <a class="button" href="bios/phoebe-monroe.html">View Profile</a>
         </div>
 
-        <a class="see-all button" href="url">View All Profiles</a>
+        <a class="see-all button" href="bios.html">View All Profiles</a>
 
       </div>
     </div><!-- End #who-section -->
