added the gmail option including a link to send an email

--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
     <div class="center">
 
       Contact section
+      Gmail: <a href="mailto:designalliance.hcc@gmail.com"> designalliance.hcc@gmail.com <img src="https://www.google.com/images/icons/product/googlemail-128.png" alt="" /></a>
 
     </div>
   </div><!-- End #contact-section -->
