added picture, name, and basic layout

--- a/works/works.html
+++ b/works/works.html
@@ -16,27 +16,31 @@
   <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body id="individual-works">
-  <!--[if lt IE 8]>
-  <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
-  <div class="page-container">
-    <div class="center">
+    <!--[if lt IE 8]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+    <div class="page-container">
 
-      <div id="img123">
-        <img src="../images/gallery/tapelifting_monroe-05.jpg"/>
+      <div id="global-navigation" class="section row"><!-- Katie Zawadowicz -->
+        <div class="center">
+
+          <img src="../images/Header & Footer/cargologo.png" href="individual-works.html"/>
+
+            <ul>
+              <li> <a class="button" href="#mission"> Mission </a> </li>
+              <li> <a class="button" href="bios.html"> Who We Are </a> </li>
+              <li> <a class="button" href="gallery.html"> Gallery </a> </li>
+              <li> <a class="button" href="#contact-section"> Work With Us </a> </li>
+            </ul>
+
+        </div>
+      </div><!-- End #global-navigation -->
+
+        <h1 id="individual-name">Phoebe Monroe</h1>
+
+      <div id="image">
+        <img src="../images/gallery/tapelifting_monroe-05.jpg" href="individual-works.html">
       </div>
-
-    </div>
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -61,7 +65,7 @@
         <p>  401 Thomas Run Road </p>
         <p>  Bel Air, MD 21015 </p>
 
-        <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
+        <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="../images/Header & Footer/FB-f-Logo__blue_29.png"/></a>
 
       </div>
     </div><!-- End #global-footer -->
