--- a/index.html
+++ b/index.html
@@ -183,11 +183,15 @@
   <div id="contact-section" class="section row"><!-- Seth Budrow -->
     <div class="center">
 
-      Contact section
-      Located at Harford Community College <img src="http://thedailyrecord.com/files/2014/10/Harford-County-Community-college-TUNE-exterior-II.jpg" alt="" />
-       <a href="mailto:designalliance.hcc@gmail.com"> designalliance.hcc@gmail.com <img src="https://www.google.com/images/icons/product/googlemail-128.png" alt="" /></a>
-       <a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="images/footer/FB-f-Logo__blue_29.png"/> Facebook</a>
-       Directions:<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3075.9446059398692!2d-76.28550498462992!3d39.56085657947385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c7dcba145cd1dd%3A0xaa33dc8dc3e92d4e!2sHarford+Community+College!5e0!3m2!1sen!2sus!4v1463012598532" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>/
+
+        Located at Harford Community College <img src="https://media.licdn.com/media-proxy/ext?w=543&h=360&f=&hash=43LHC60cCYTPEjrfv3HR6o0j%2BKE%3D&ora=1%2CaFBCTXdkRmpGL2lvQUFBPQ%2CxAVta9Er0Vinkhwfjw8177yE41y87UNCVordEGXyD3u0qYrdf3-6ecWLeLGpuQxHKy8ckQVnfPKhFTjjD5K-KIvsL9wk3Zazd424ZxUBbFI8lWxI" alt="" />
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3075.9446059398692!2d-76.28550498462992!3d39.56085657947385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c7dcba145cd1dd%3A0xaa33dc8dc3e92d4e!2sHarford+Community+College!5e0!3m2!1sen!2sus!4v1463012598532" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <p><a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="http://femoticons.net/images/iconfb.png"/> Facebook</a> </p>
+        <p> <a href="mailto:designalliance.hcc@gmail.com"> designalliance.hcc@gmail.com <img src="https://www.google.com/images/icons/product/googlemail-128.png" alt="" /></a> </p>
+        
+
+
+
     </div>
   </div><!-- End #contact-section -->
 
