changed image and centered

--- a/works/works.html
+++ b/works/works.html
@@ -36,13 +36,9 @@
         </div>
       </div><!-- End #global-navigation -->
 
-        <h1 id="individual-name">Phoebe Monroe</h1>
-
       <div id="image">
-        <img src="../images/gallery/tapelifting_monroe-05.jpg" href="individual-works.html">
+        <img src="../images/gallery/Williams-9-8(10.5 by 10.5).jpg" href="individual-works.html">
       </div>
-
-
 
 
 
