titles and header

--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>PUT A TITLE HERE</title>
+  <title>Gallery</title>
   <meta name="description" content="PUT A DESCRIPTION ABOUT YOUR SITE HERE">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,16 +23,20 @@
   <div class="page-container">
     <div class="center">
 
+      <h1>
+        Design Alliance Full Gallery
+      </h1>
+
       <div class="gallery">
 
-        <a class="fancybox" rel="images" href="images/gallery/Williams-9-8(10.5 by 10.5).jpg"><img src="images/gallery/crops/Williams1.jpg"></a>
-        <a class="fancybox" rel="images" href="images/gallery/Williams-12-9-1.psd(10.5 by 10.5).jpg"><img src="images/gallery/crops/Williams2.jpg"></a>
-        <a class="fancybox" rel="images" href="images/gallery/harris_digitalreworking_04.jpg"><img src="images/gallery/crops/harris4.jpg"></a>
-        <a class="fancybox" rel="images" href="images/gallery/Lu_1.jpg"><img src="images/gallery/crops/Lu1.jpg"></a>
-        <a class="fancybox" rel="images" href="images/gallery/printdummy_martin_1.0.jpg"><img src="images/gallery/crops/printdummymartin.jpg"></a>
-        <a class="fancybox" rel="images" href="images/gallery/rakowski_300-3.1flat copy.jpg"><img src="images/gallery/crops/rakowski.jpg"></a>
-        <a class="fancybox" rel="images" href="images/gallery/Schultz62.jpg"><img src="images/gallery/crops/Schultz62.jpg"></a>
-        <a class="fancybox" rel="images" href="images/gallery/tapeliftingfinal3psd.jpg"><img src="images/gallery/crops/tapelifting3.jpg"></a>
+        <a href="works/works.html"><img src="images/gallery/crops/Williams1.jpg"></a>
+        <a href="works/works.html"><img src="images/gallery/crops/Williams2.jpg"></a>
+        <a href="works/works.html"><img src="images/gallery/crops/harris4.jpg"></a>
+        <a href="works/works.html"><img src="images/gallery/crops/Lu1.jpg"></a>
+        <a href="works/works.html"><img src="images/gallery/crops/printdummymartin.jpg"></a>
+        <a href="works/works.html"><img src="images/gallery/crops/rakowski.jpg"></a>
+        <a href="works/works.html"><img src="images/gallery/crops/Schultz62.jpg"></a>
+        <a href="works/works.html"><img src="images/gallery/crops/tapelifting3.jpg"></a>
 
       </div>
 
@@ -65,9 +69,7 @@
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
-  <script type="text/javascript" src="js/vendor/fancybox/jquery.fancybox.pack.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/gallery.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <!-- <script>
