moved home gallery navigation buttons below images

--- a/index.html
+++ b/index.html
@@ -142,33 +142,34 @@
 
           <div class="inner">
             <ul class="clearfix">
-              <li><a href="works/works.html"><img src="images/gallery/crops/Williams1.jpg" alt=""></a></li>
-              <li><a href="works/works.html"><img src="images/gallery/crops/Williams2.jpg" alt=""></a></li>
-              <li><a href="works/works.html"><img src="images/gallery/crops/harris4.jpg" alt=""></a></li>
-              <li><a href="works/works.html"><img src="images/gallery/crops/Lu1.jpg" alt=""></a></li>
-              <li><a href="works/works.html"><img src="images/gallery/crops/printdummymartin.jpg" alt=""></a></li>
-              <li><a href="works/works.html"><img src="images/gallery/crops/rakowski.jpg" alt=""></a></li>
-              <li><a href="works/works.html"><img src="images/gallery/crops/Schultz62.jpg" alt=""></a></li>
-              <li><a href="works/works.html"><img src="images/gallery/crops/tapelifting3.jpg" alt=""></a></li>
+              <li><a href="works/works.html"><img src="images/gallery/crops/Williams1.jpg" alt=""></a>
+              </li><li><a href="works/works.html"><img src="images/gallery/crops/Williams2.jpg" alt=""></a>
+              </li><li><a href="works/works.html"><img src="images/gallery/crops/harris4.jpg" alt=""></a>
+              </li><li><a href="works/works.html"><img src="images/gallery/crops/Lu1.jpg" alt=""></a>
+              </li><li><a href="works/works.html"><img src="images/gallery/crops/printdummymartin.jpg" alt=""></a>
+              </li><li><a href="works/works.html"><img src="images/gallery/crops/rakowski.jpg" alt=""></a>
+              </li><li><a href="works/works.html"><img src="images/gallery/crops/Schultz62.jpg" alt=""></a>
+              </li><li><a href="works/works.html"><img src="images/gallery/crops/tapelifting3.jpg" alt=""></a>
+              </li>
             </ul>
           </div>
 
-          <div class="galButtons">
-            <nav>
-              <button class="active"></button>
-              <button></button>
-              <button></button>
-              <button></button>
-              <button></button>
-              <button></button>
-              <button></button>
-              <button></button>
-            </nav>
-          </div>
+
+          <nav>
+            <button class="active"></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
+          </nav>
+          
 
         </div>
 
-    
+
       </div>
 
       <div id="photoLink">
