renamed works.html to harris4.html

--- a/works/harris4.html
+++ b/works/harris4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>PUT A TITLE HERE</title>
+  <title>Creativity Unleashed</title>
   <meta name="description" content="PUT A DESCRIPTION ABOUT YOUR SITE HERE">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -36,9 +36,7 @@
         </div>
       </div><!-- End #global-navigation -->
 
-      <div id="image">
-        <img src="../images/gallery/Williams-9-8(10.5 by 10.5).jpg" href="individual-works.html">
-      </div>
+
 
 
 
@@ -65,6 +63,10 @@
 
       </div>
     </div><!-- End #global-footer -->
+
+    <div id="image">
+      <img id="test" src="../images/gallery/crops/harris4.jpg">
+    </div>
 
   </div><!-- End .page-container -->
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
