--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
 
           <div class="inner">
             <ul class="clearfix">
-              <li><a href="works/works.html"><img src="images/gallery/crops/Williams1.jpg" alt=""></a>
-              </li><li><a href="works/works.html"><img src="images/gallery/crops/Williams2.jpg" alt=""></a>
-              </li><li><a href="works/works.html"><img src="images/gallery/crops/harris4.jpg" alt=""></a>
-              </li><li><a href="works/works.html"><img src="images/gallery/crops/Lu1.jpg" alt=""></a></li>
+              <li><a href="works/Williams1.html"><img src="images/gallery/crops/Williams1.jpg" alt=""></a>
+              </li><li><a href="works/Williams2.html"><img src="images/gallery/crops/Williams2.jpg" alt=""></a>
+              </li><li><a href="works/harris4.html"><img src="images/gallery/crops/harris4.jpg" alt=""></a>
+              </li><li><a href="works/Lu1.html"><img src="images/gallery/crops/Lu1.jpg" alt=""></a></li>
             </ul>
           </div>
 
@@ -188,7 +188,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3075.9446059398692!2d-76.28550498462992!3d39.56085657947385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c7dcba145cd1dd%3A0xaa33dc8dc3e92d4e!2sHarford+Community+College!5e0!3m2!1sen!2sus!4v1463012598532" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         <p><a href="https://www.facebook.com/Design-Alliance-154206664664725/"><img src="http://femoticons.net/images/iconfb.png"/> Facebook</a> </p>
         <p> <a href="mailto:designalliance.hcc@gmail.com"> designalliance.hcc@gmail.com <img src="https://www.google.com/images/icons/product/googlemail-128.png" alt="" /></a> </p>
-        
+
 
 
 
